added add and delete function
